register.html implement tipoUsuário on front end

--- a/style/usuario.css
+++ b/style/usuario.css
@@ -72,7 +72,7 @@
   }
   
   p {
-      margin: 10px 20px;
+      margin: 5px 20px;
   }
   
   .tema {
@@ -150,7 +150,7 @@
     }
 
     p {
-      margin: 30px 430px 0px 430px;
+      margin: 1% 25%;
     }
 
     .textosenha {
